# unicode-path-bridge

./: .gitignore  CHANGELOG.md  Cargo.toml  EUPB-RUST-SPECS.md  HANDOFF.md  LICENSE  README.md  TODO.md  build.cmd  build.rs
archive/dotnet/docs/: alternatives.md  how-it-works.md
archive/dotnet/src/: ubp.cs
docs/: registry-setup.md
examples/: bat-script.reg  cmd-here.reg  copy-path.reg  open-in-vscode.reg  open-in-vscodium.reg  open-in-windows-terminal.reg  open-with-notepadpp.reg  python-script.reg  run-script.reg  uninstall.reg  wsl-here.reg
src/: eupb.manifest  eupb.rc  lib.rs  main.rs  ubp.manifest  win.rs
tests/: escape.rs  integration.rs  test-paths.ps1  test-receive.ps1
