[package]
name = "eupb"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
authors = ["erratos"]
description = "Explorer Unicode Path Bridge — Windows wrapper that forwards Unicode args to a target without flashing a console window"
license = "MIT"
repository = "https://github.com/erratos/eupb"
readme = "README.md"
keywords = ["windows", "unicode", "explorer", "context-menu", "shell"]
categories = ["command-line-utilities", "os::windows-apis"]

[[bin]]
name = "eupb"
path = "src/main.rs"

[[bin]]
name = "eupb-test-target"
path = "src/bin/eupb_test_target.rs"
required-features = []

[lib]
name = "eupb"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }

[target.'cfg(windows)'.dependencies.windows]
version = "0.59"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Security",
    "Win32_Storage_FileSystem",
]

[target.'cfg(windows)'.build-dependencies]
embed-resource = "3"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
rstest = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"
